add: deploy workflow

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "to-do-react-app",
+  "homepage": "https://camiloLelis.github.io/to-do-react-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
